handle dead push subscriptions
